# clamav-win32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  TODO.txt  clam.hdb  clamav.reg  clamd.conf  freshclam.conf  libclamav.def  libclamav_llvm.def  libclamunrar.def  libclamunrar_iface.def  libfreshclam.def  llvm-sync.py  pthreads.def  sort-defs.py
cmake/: bzip2.cmake  clambc.cmake  clamd.cmake  clamdscan.cmake  clamdtop.cmake  clamscan.cmake  clamunrar.cmake  curl.cmake  freshclam.cmake  gnulib.cmake  json-c.cmake  libclamav.cmake  libclammspack.cmake  libclamunrar.cmake  libxml2.cmake  llvm-sources.cmake  llvm.cmake  pcre2.cmake  pdcurses.cmake  sigtool.cmake  toolchain-mingw-x64.cmake  toolchain-mingw-x86.cmake  toolchain-mingw.cmake  zlib.cmake
include/: clamav-config.h  clamav-types.h  clamav-version.h  clamwin.h  config.h  cw_inline.h  cwdefs.h  cwhelpers.h  dirent.h  exeScanner.h  inttypes.h  libgen.h  ltdl.h  osdeps.h  platform.h  posix-errno.h  resolv.h  safe_ctype.h  socket_inline.h  stdbool.h  stdint.h  target.h  termios.h  unistd.h
include/json-c/: config.h
include/libclammspack/: config.h
include/libxml/: xmlversion.h
include/libxml2/: config.h
include/libxml2/libxml/: xmlversion.h
include/llvm/Config/: config.h  llvm-config.h
include/llvm/System/: DataTypes.h
include/llvmbuild/llvm/Config/: config.h  llvm-config.h
include/llvmbuild/llvm/System/: DataTypes.h
include/pcre2/: config.h
mingw/: .gitignore  Makefile  common.mak  libs.mak  llvm.mak  tools.mak
msvc/: .gitignore  clamav-vc8.sln
msvc/proj/vc8/: clamav.vsprops  clambc.vcproj  clamd.vcproj  clamdscan.vcproj  clamscan.vcproj  exeScanner.vcproj  freshclam.vcproj  libclamav.vcproj  libclamav_llvm.vcproj  libclammspack.vcproj  libclamunrar.vcproj  libclamunrar_iface.vcproj  libcurl.vcproj  libfreshclam.vcproj  libmspack.vcproj  masm64.rules  profiler.vcproj  sigcheck.vcproj  sigtool.vcproj  unscrambler.vcproj
resources/: clamav.rc  clambc.rc  clamd.rc  clamdscan.rc  clamdtop.rc  clamscan.rc  freshclam.rc  libclamav.rc  libclamav_llvm.rc  libclamunrar.rc  libclamunrar_iface.aps  libclamunrar_iface.rc  libfreshclam.rc  sigtool.rc
src/dllmain/: clamwin.c  dirent.c  dllmain.c  inet_ntop.c  jit-dynload.c  legacy_stdio.cpp  libgen.c  mkstemp.c  osdeps.c  posix-errno.c  pthread-mingw.c  shared-misc.c  sigcheck.c  termios.c  tls.c  win32others.c  winstat.c
src/helpers/: crashdump.c  cw_main.c  cw_sch.c  dnsquery.c  dresult.c  exeScanner.c  mprintf_disable.c  scanmem.c  service.c  win32poll.c
src/shared/: win32actions.c  win32optparser.c
src/unrar/: extinfo.cpp  isnt.cpp  system.cpp
tools/: exeScanner.rc  exeScanner_app.c  profiler.c  profiler.rc  sigcheck.rc  sigcheck_app.c  tools.rc  unscrambler.c  unscrambler.rc
